--- a/03_CSS_pt_2/projeto/style.css
+++ b/03_CSS_pt_2/projeto/style.css
@@ -41,10 +41,11 @@ h1 {
 }
 
 p {
-    width: 540px;
     font-size: 28px;
     line-height: 48px;
+    opacity: .6;
     margin: 15px 0;
+    width: 540px;
 }
 
 button {
@@ -94,8 +95,8 @@ header {
 
 @media screen and (max-width: 900px) {
     .container-left {
-        width: 100px;
-        height: 50px;
+        width: 100%;
+        height: 50%;
         padding: 0;
         margin: 0;
     }
@@ -110,7 +111,7 @@ header {
 
     img {
         position: static;
-        width: 90;
+        max-width: 90%;
     }
 
     header {
@@ -126,15 +127,16 @@ header {
     }
 
     p {
+        font-size: 14px;
+        line-height: 24px;
         margin: 15px 40px;
         width: auto;
         text-align: center;
-        font-size: 14px;
-        line-height: 24px;
+        
     }
 
     button {
         margin: 0 auto;
         display: block;
     }
-} 
+}
